GH-215 Add Statement deletion API
