# server/modules/authorization/src/main/java/io/taskmigo/authorization/statement/application/port/in/internal/StatementCommandService.java
@@ -29,6 +29,8 @@ public interface StatementCommandService {
         @Nullable String policy
     );
 
+    Optional<Statement> findById(UUID id);
+
     Optional<Statement> findByCode(@Nullable String code);
 
     void delete(Statement statement);
